style.css
* {
    padding: 0;
    margin: 0;
}

html {
    scroll-behavior: smooth;
}

/* navbar */
.navbar {
    background-color: #232323;
    height: 12vh;
    position: fixed;
    width: 100%;
    display: flex;
    justify-content: space-around;
	align-items: center;
	z-index: 100;
}

.navbar .logo h2 {
    color: #f5f5f5;
	letter-spacing: 2px;
	color: orange;
    font-family: Major Mono Display;
}

.navbar .logo h2 a {
    text-decoration: none;
    color: orange;
}

.navbar .nav-links {
    display: flex;
    list-style: none;
    justify-content: space-around;
    align-items: center;
    width: 50%;
    height: 100%;
	transition: .4s;
	font-family: Nova Flat;
}

.navbar .nav-links li {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: .4s;
}

.navbar .nav-links li:hover {
    background-color: #000;
}

.navbar .nav-links li a {
    color: #f5f5f5;
    text-decoration: none;
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: 2px;
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.toggle {
    background-color: #f5f5f5;
    width: 35px;
    height: 35px;
    border-radius: 100%;
    cursor: pointer;
    transition: .4s;
    display: none;
}

.nav-links.active {
    transform: translateX(0);
}

.toggle.clicked {
    background-color: rgb(255, 31, 31);
}

@media screen and (max-width:1024px) {
    .nav-links {
        width: 60%;
    }
}

@media screen and (max-width:768px) {
    .nav-links {
        position: absolute;
        right: 0;
        height: 88vh !important;
        width: 100% !important;
        top: 12vh;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        background-color: #232323;
        transform: translateX(100%);
    }
    .toggle {
        display: block;
    }
}
/* navbar */

/* header */
.banner {
	height: 100vh;
	background-color: #4d4d4d;
	position: relative;
	z-index: 2;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.banner img {
	width: 300px;
	height: 300px;
	object-fit: cover;
	border-radius: 100%;
	position: absolute;
	margin: 20vh 0 0 0;
	border: 6px solid #4d4d4d;
}

.banner .text {
	margin: 80vh 0;
	color: #f5f5f5;
	text-align: center;
	font-family: Poppins;
	letter-spacing: 1px;
}

.banner .text h2 {
	text-transform: uppercase;
}

.banner::before {
	content: '';
	width: 100%;
	height: 50%;
	display: block;
	position: absolute;
	background: url(img/img1.jfif);
	background-size: cover;
	background-repeat: no-repeat;
	background-position: bottom;
	z-index: -1;
	opacity: .6;
}

@media screen and (max-width:768px) {
    .banner .text {
        margin: 70vh 0;
        padding: 0 2rem;
    }
}
/* header */

/* about */
.about {
    font-family: Poppins;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.about h1,h2 {
    font-weight: normal;
    margin: 10px 0;
}

.about img {
    height: 80vh;
    width: 35rem;
    object-fit: cover;
}

.about .text {
    width: 40%;
}

@media screen and (max-width:1024px) {
    .about img {
        height: 80vh;
        width: 20rem;
        object-fit: cover;
    }
    .about .text {
        width: 50%;
    }
}

@media screen and (max-width:768px) {
    .about {
        display: flex;
        flex-direction: column;
    }
    .about img {
        height: 80vh;
        width: 90%;
        object-fit: cover;
    }
    .about .text {
        width: 80%;
        text-align: justify;
    }
}
/* about */

/* skill */
.skill {
    font-family: Poppins;
    background-color: #232323;
    color: #f5f5f5;
    padding: 20rem 0;
    z-index: -2;
}

.skill>.text {
    text-align: center;
}

.skill>.text h1 {
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: normal;
}

.skill .cards>ul {
    display: flex;
    justify-content: space-around;
    list-style: none;
}

.skill .cards>ul .card-item {
    background: #4d4d4d;
    width: 25%;
    margin: 5rem 0 0 0;
    position: relative;
    cursor: pointer;
    transition: .4s;
    border-radius: 4px 4px 0 0;
    box-shadow: 0 30px 50px black;
}

.skill .cards>ul .card-item h2 {
    text-align: center;
}

.skill .cards>ul .card-item .wrap {
    padding: 2rem;
}

.skill .cards>ul .card-item .dropdown {
    transition: .4s;
    list-style-type: none;
    transform: translateY(-100%);
    visibility: hidden;
    opacity: 0;
    position: absolute;
    background-color: #4d4d4d;
    width: 100%;
    color: #f5f5f5;
    left: 0;
    top: 7.5rem;
    border-radius: 0 0 4px 4px;
    transition-delay: .1s;
    z-index: -1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}

.skill .cards>ul .card-item .dropdown.one {
    height: 210%;
}

.skill .cards>ul .card-item .dropdown.two {
    height: 110%;
}

.skill .cards>ul .card-item .dropdown li {
    margin: 0 3rem;
}

.skill .cards>ul .card-item:hover .dropdown {
    visibility: visible;
    opacity: 1;
    transform: translateY(0);
    z-index: 1;
}

@media screen and (max-width:768px) {
    .skill .cards>ul {
        display: flex;
        justify-content: space-around;
        align-items: center;
        list-style: none;
        flex-direction: column;
    }
    .skill .cards>ul .card-item {
        background: #4d4d4d;
        width: 75%;
        margin: 7rem 0 0 0;
        position: relative;
        cursor: pointer;
        transition: .4s;
        border-radius: 4px 4px 0 0;
    }
}
/* skill */

/* project */
.project .text h1 {
    font-family: Poppins;
    text-align: center;
    padding: 0 0 2rem 0;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: normal;
}

.project .project-card.youtube {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    height: 60vh;
    position: relative;
    background-image: url(img/banner.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.project .project-card.youtube .text {
    font-family: Poppins;
    font-weight: normal;
    color: #f5f5f5;
}

.project .project-card.youtube img {
    width: 100px;
    height: 100px;
    object-fit: cover;
    border-radius: 100%;
    box-shadow: 0 0 10px red, 0 0 50px green, 0 0 90px blue, 0 0 130px orange;
}

.project .project-card.project-card.frontend-mentor {
    display: flex;
    justify-content: space-around;
    align-items: baseline;
    width: 100%;
    height: 100vh;
    position: relative;
}

.project .project-card.frontend-mentor .text {
    font-family: Poppins;
    font-weight: normal;
    color: #232323;
    display: flex;
    width: 100%;
    padding: 4rem 0 0 0;
    justify-content: space-around;
    align-items: center;
}

.project .project-card.frontend-mentor .logo {
    width: 50%;
}

.project .project-card.frontend-mentor .text .logo img {
    width: 100%;
    object-fit: cover;
    background-color: #f5f5f5;
    padding: 20px;
    object-fit: cover;
    border-radius: 20px;
}

.project .project-card.frontend-mentor .myChallenge {
    width: 50%;
    position: absolute;
    top: 50vh;
}

.project .project-card.frontend-mentor .myChallenge img {
    width: 100%;
    transition: .4s;
    border-radius: 16px;
}

.project .project-card.frontend-mentor .myChallenge:hover img {
    transform: scale(1.08 );
}

@media screen and (max-width:768px) {
    .project .project-card.youtube {
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        align-items: center;
        width: 100%;
        height: 100vh;
        text-align: center;
        position: relative;
        background-image: url(img/banner.jpg);
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
    }
    .project .project-card.youtube iframe {
        width: 80%;
    }
    .project .project-card.frontend-mentor .text {
        font-family: Poppins;
        font-weight: normal;
        color: #232323;
        display: flex;
        flex-direction: column;
        text-align: center;
        width: 100%;
        padding: 4rem 0 0 0;
        justify-content: space-around;
        align-items: center;
    }
    .project .project-card.frontend-mentor .myChallenge {
        width: 80%;
        position: absolute;
        top: 50vh;
    }
    .project .project-card.frontend-mentor .myChallenge img {
        width: 100%;
        transition: .4s;
        border-radius: 16px;
    }
    .project .project-card.frontend-mentor .logo {
        margin: 20px auto;
        display: block;
        width: 50%;
    }
}
/* project */

/* contact */
.contact {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    text-align: left;
    font-family: Poppins;
}

.contact .text {
    width: 35%;
    height: 20rem;
    background: #232323;
    display: flex;
    color: #f5f5f5;
    flex-direction: column;
    text-align: right;
    justify-content: center;
}

.contact .text h1,p {
    padding: 0 30px;
    font-weight: normal;
}

.contact .form {
    background: #f5f5f5;
    width: 50%;
    height: 20rem;
}

.contact .form form {
    padding: 1rem 3rem;
}

.contact .form form textarea {
    resize: none;
}

.contact .form form input,textarea {
    width: 80%;
    margin: 20px 0;
}

.contact .form form input::placeholder,textarea::placeholder {
    font-weight: bold;
    letter-spacing: 2px;
    text-transform: uppercase;
}

.contact .form .form-control {
    border: 0;
    outline: 0;
    background: transparent;
    border-bottom: .5px solid #3577c3;
    transition: .5s;
}

.contact .form .form-control:focus {
    border-bottom: 2px solid #3577c3;
}

.contact .form .btn {
    background: #3577c3;
    height: 40px;
    border: none;
    color: #f5f5f5;
    letter-spacing: 3px;
    font-weight: bold;
    cursor: pointer;
    transition: .4s;
}

.contact .form .btn:hover {
    background: blue;
}

@media screen and (max-width:768px) {
    .contact {
        display: flex;
        align-items: center;
        justify-content: center;
        height: 100vh;
        text-align: left;
        padding: 2rem 0;
        flex-direction: column !important;
    }
    .contact .text {
        width: 80%;
        height: 20rem;
        background: #232323;
        display: flex;
        color: #f5f5f5;
        flex-direction: column;
        text-align: center;
        justify-content: center;
    }
    .contact .form {
        background: #f5f5f5;
        width: 80%;
        height: 20rem;
    }
    .contact .form form input,textarea {
        width: 100%;
        margin: 20px 0;
    }
}
/* contact */

/* copyright */
.copyright {
    font-family: Patrick Hand;
    text-align: center;
    padding: 10rem 0;
    font-weight: bold;
    letter-spacing: 1px;
    text-transform: uppercase;
}

h4.copyright {
    padding: 1.5rem 0;
}

h5.copyright {
    padding: 1rem 0;
}
/* copyright */

